fix: footer text wrap by change gap on less then 470px

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -456,7 +456,7 @@
 
 @media (max-width: 470px) {
   .page-footer {
-    gap: 4vw;
+    gap: 2vw;
   }
 }
 
